add archive html, arhivetype, endpoint, service and repository methods

--- a/src/main/resources/static/horse.html
+++ b/src/main/resources/static/horse.html
@@ -18,6 +18,9 @@
 <div class="sticky-menu">
     <div class="menu-logo">
         <img src="img/trenderlogoblack.jpg">
+        <a href="/index.html" class="trender-menu-link">Trender</a>
+        <a href="/horse.html" class="trender-menu-link">Horse Graphs</a>
+        <a href="/archive.html" class="trender-menu-link">Archive</a>
     </div>
     <div class="menu-text">
     </div>
