save trendresults 5 min prior to start

--- a/src/main/resources/static/archive.html
+++ b/src/main/resources/static/archive.html
@@ -38,6 +38,7 @@
             <form>
                 <select id="selectGameType">
                     <option value="ALL_WINNERS" selected="selected">All Winners</option>
+                    <option value="ALL_V86_WINNERS">All V86 Winners</option>
                     <option value="ALL_V75_WINNERS">All V75 Winners</option>
                     <option value="ALL_V64_WINNERS">All V64 Winners</option>
                     <option value="ALL_V65_WINNERS">All V65 Winners</option>
