fix archive vdist60, add trendflag and trendflagstatistics for archive

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,17 +17,8 @@
         };
 
         function reloadData() {
-            /*            const data = downladData();
-
-                        data.then(trend => {
-                            console.log(trend)
-                            fetchData(trend);
-                            loadchart(trend);
-                        })*/
             fetchData();
             fetchMultisetData();
-            // loadchart();
-            // loadChartHorses();
         }
     </script>
 </head>
@@ -146,6 +137,7 @@
                     <th>VDistribution 60</th>
                     <th>VDistribution 30</th>
                     <th>VDistribution 15</th>
+                    <th>50% 15 min</th>
                     <th>Horse Number</th>
                 </tr>
                 </thead>
