add red flags etc

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -137,7 +137,9 @@
                     <th>VDistribution 60</th>
                     <th>VDistribution 30</th>
                     <th>VDistribution 15</th>
-                    <th>50% 15 min</th>
+                    <th>VDistribution 0</th>
+                    <th>Should be played</th>
+                    <th>Flag</th>
                     <th>Horse Number</th>
                 </tr>
                 </thead>
